# Plastic-Scintillator-with-Teflon-Barriers-GEANT4

./: CMakeLists.txt  README.md  plot_aluminium_photon.C  plot_photon_production.C  sim.cc
include/: PMActionInitialization.hh  PMDetectorConstruction.hh  PMEventAction.hh  PMPhysicsList.hh  PMPrimaryGenerator.hh  PMRunAction.hh  PMSensitiveDetector.hh  PMSteppingAction.hh
macros/: run.mac
src/: PMActionInitialization.cc  PMDetectorConstruction.cc  PMEventAction.cc  PMPhysicsList.cc  PMPrimaryGenerator.cc  PMRunAction.cc  PMSensitiveDetector.cc  PMSteppingAction.cc
